# cookiecutter-python-lib

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  cookiecutter.json  requirements-dev.txt
.github/workflows/: requirements.txt  test.yml
hooks/: post_gen_project.py
tests/: conftest.py  test_dev_environment.py  test_documentation.py
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  .readthedocs.yml  pylintrc  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/docs/__mkdocs/: mkdocs.yml
{{cookiecutter.project_name}}/docs/__mkdocs/docs/: index.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
